<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activities.Authentication">


        <ImageView
            android:id="@+id/extended_image"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/extended_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_extended_icon"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/start_using_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/kohinoor_bangla_medium"
            android:letterSpacing=".05"
            android:paddingTop="10dp"
            android:text="@string/start_using"
            android:textColor="@color/lamp_black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extended_image" />

        <TextView
            android:id="@+id/command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:text="@string/to_start_using_you_need_to_login_first"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_using_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/mobile_number"
            android:textColorHint="@color/light_dark_gray"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/command"
            app:prefixText="+880"
            app:prefixTextColor="@color/lamp_black"
            app:startIconDrawable="@drawable/ic_outline_call_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="50dp"
                android:paddingEnd="0dp"
                android:textColor="@color/lamp_black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/continue_bt"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:enabled="false"
            android:text="@string/_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name_til" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/dialog_ca_bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>