<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbarSize="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/type_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/income_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_top_left_rounded_corner"
                    android:backgroundTint="@color/light_gray"
                    android:paddingVertical="3dp"
                    android:text="@string/income"
                    android:textAlignment="center"
                    android:textColor="@color/lamp_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/expense_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_top_right_rounded_corner"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="3dp"
                    android:text="@string/expense"
                    android:textAlignment="center"
                    android:textColor="@color/lamp_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/date_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/type_ll"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:paddingHorizontal="5dp"
                android:paddingBottom="15dp"
                android:textColorHint="@color/light_dark_gray"
                android:textSize="14sp" />


            <LinearLayout
                android:id="@+id/tt_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_et"
                android:weightSum="10">

                <EditText
                    android:id="@+id/description_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="6"
                    android:hint="@string/description"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions"
                    android:paddingHorizontal="5dp"
                    android:paddingBottom="15dp"
                    android:textColorHint="@color/light_dark_gray"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/amount_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="4"
                    android:hint="@string/amount"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="5dp"
                    android:paddingBottom="15dp"
                    android:textColorHint="@color/light_dark_gray"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/button_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tt_ll"
                android:gravity="end"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/cancel_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/bg_solid_rounded_primary_10"
                    android:gravity="end"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="4dp"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/bg_solid_rounded_primary_10"
                    android:backgroundTint="@color/light_gray"
                    android:gravity="end"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="4dp"
                    android:text="@string/add"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>