<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    android:animateLayoutChanges="true"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/account_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_title"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:paddingHorizontal="5dp"
            android:paddingBottom="15dp"
            android:textColorHint="@color/light_dark_gray"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/account_type_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/account_types"
            android:minHeight="30dp"
            android:paddingVertical="5dp"
            android:textSize="14sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:background="@color/iron_gray" />


        <EditText
            android:id="@+id/no_of_people_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_people"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginBottom="-3dp"
            android:paddingHorizontal="5dp"
            android:paddingBottom="15dp"
            android:textColorHint="@color/light_dark_gray"
            android:textSize="14sp"
            android:visibility="gone" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/person_details_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            android:scrollbarSize="0dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/button_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/cancel_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/bg_solid_rounded_primary_10"
                android:gravity="end"
                android:paddingHorizontal="15dp"
                android:paddingVertical="4dp"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/create_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_solid_rounded_primary_10"
                android:backgroundTint="@color/light_gray"
                android:gravity="end"
                android:paddingHorizontal="15dp"
                android:paddingVertical="4dp"
                android:text="@string/create"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/next_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_solid_rounded_primary_10"
                android:gravity="end"
                android:paddingHorizontal="15dp"
                android:paddingVertical="4dp"
                android:text="@string/next"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>